--- a/i_team.html
+++ b/i_team.html
@@ -52,7 +52,7 @@
           <h2>Research Scientists </h2>
           <ul>
             <li><a href="https://zhizeli.github.io">Zhize Li</a> (9/2020-present) </li>
-            <li><a href="https://ehbergou.github.io">El Houcine Bergou</a> (2/2020-present) </li>
+            <li><a href="https://ehbergou.github.io">El Houcine Bergou</a> (2/2020-12/2020) </li>
             <li><a href="https://lcondat.github.io">Laurent Condat</a> (11/2019-present) </li>
           </ul>
 
@@ -75,7 +75,10 @@
             <li><a href="https://samuelhorvath.github.io">Samuel Horváth</a>  (1/2019-present)</li>
             <li><a href="https://vcc.kaust.edu.sa/Pages/Sailanbayev.aspx">Alibek Sailanbayev</a>  (1/2019-present)</li>
             <li><a href="https://konstmish.github.io/">Konstantin Mishchenko</a> (9/2017-present)</li>
-            <li><a href="https://fhanzely.github.io/index.html">Filip Hanzely</a> (9/2017-7/2020)</li>
+            <li><a href="https://fhanzely.github.io/index.html">Filip Hanzely</a> (9/2017-7/2020) <br>
+              thesis: <a href="https://arxiv.org/abs/2008.11824">Optimization for Supervised Machine Learning: Randomized Algorithms for Data and Parameters</a> <br>
+              current position: Research Assitant Professor, TTIC, USA
+            </li>
           </ul>
 
           <h2>MS Students </h2>
