--- a/i_team.html
+++ b/i_team.html
@@ -77,7 +77,7 @@
             <li><a href="https://konstmish.github.io/">Konstantin Mishchenko</a> (9/2017-present)</li>
             <li><a href="https://fhanzely.github.io/index.html">Filip Hanzely</a> (9/2017-7/2020) <br>
               thesis: <a href="https://arxiv.org/abs/2008.11824">Optimization for Supervised Machine Learning: Randomized Algorithms for Data and Parameters</a> <br>
-              current position: Research Assitant Professor, TTIC, USA
+              current position: Research Assistant Professor, TTIC, Chicago, USA
             </li>
           </ul>
 
