AISTATS 2021 + Inform & Inference

--- a/i_papers.html
+++ b/i_papers.html
@@ -51,10 +51,16 @@
 
           <h1> Prepared in 2020 </h1>
 
+          [151] Samuel Horváth, Aaron Klein, Peter Richtárik and Cedric Archambeau<br>
+          <b>Hyperparameter transfer learning with adaptive complexity</b><br>
+          The 24th International Conference on Artificial Intelligence and Statistics (AISTATS 2021) <br>
+          [arXiv]  <br>
+          <br>
+
           [150] Xun Qian, Hanze Dong, Peter Richtárik and Tong Zhang<br>
           <b>Error compensated loopless SVRG for distributed optimization</b><br>
-          <span class="important">Federated Learning Paper</span><br>
           <a href="https://opt-ml.org/papers/2020/paper_61.pdf">OPT2020: 12th Annual Workshop on Optimization for Machine Learning (NeurIPS 2020 Workshop) </a> <br>
+          <span class="important">Federated Learning Paper</span><br>
           [<a href="https://opt-ml.org/posters/2020/poster_61.pdf">poster</a>] [code: EC-LSVRG] <br>
           <br>
 
@@ -66,20 +72,22 @@
 
           [148] Eduard Gorbunov, Filip Hanzely, and Peter Richtárik<br>
           <b>Local SGD: unified theory and new efficient methods</b><br>
+          The 24th International Conference on Artificial Intelligence and Statistics (AISTATS 2021) <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2011.02828">arXiv</a>] [code: S-Local-SVRG] <br>
           <br>
 
           [147] Dmitry Kovalev, Anastasia Koloskova, Martin Jaggi, Peter Richtárik, and Sebastian U. Stich<br>
           <b>A linearly convergent algorithm for decentralized optimization: sending less bits for free!</b><br>
+          The 24th International Conference on Artificial Intelligence and Statistics (AISTATS 2021) <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2011.01697">arXiv</a>]  <br>
           <br>
 
           [146] Wenlin Chen, Samuel Horváth, and Peter Richtárik<br>
           <b>Optimal client sampling for federated learning</b><br>
-          <span class="important">Federated Learning Paper</span><br>
           <a href="https://ppml-workshop.github.io/#papers">Privacy Preserving Machine Learning (NeurIPS 2020 Workshop)</a> <br>
+          <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2010.13723">arXiv</a>] [code: OCS, AOCS]  <br>
           <br>
 
@@ -224,6 +232,7 @@
 
           [123] Mher Safaryan, Egor Shulgin and Peter Richtárik<br>
           <b>Uncertainty principle for communication compression in distributed and federated learning and the search for an optimal compressor</b><br>
+          To appear in: Information and Inference, A Journal of the IMA <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2002.08958">arXiv</a>]<br>
           <br>
