--- a/index.html
+++ b/index.html
@@ -43,9 +43,41 @@
         <div id="content">
 
 
+          <h3>January 22, 2021</h3>
+          <h1>Paper Accepted to Information and Inference: A Journal of the IMA</h1>
+            <br>
+          Our paper "Uncertainty Principle for Communication Compression in Distributed and Federated Learning and the Search for an Optimal Compressor”, joint work with  <a href="https://mher-safaryan.github.io">Mher Safaryan</a> and <a href="https://shulgin-egor.github.io">Egor Shulgin</a>,  was accepted to
+      <a href="">Information and Inference: A Journal of the IMA</a>.<br><br>
+
+    <i>Abstract:</i> In order to mitigate the high communication cost in distributed and federated learning,
+    various vector compression schemes, such as quantization, sparsification and dithering, have become
+    very popular. In designing a compression method, one aims to communicate as few bits
+    as possible, which minimizes the cost per communication round, while at the same time attempting to
+    impart as little distortion (variance) to the communicated messages as possible, which minimizes
+    the adverse effect of the compression on the overall number of communication rounds. However,
+     intuitively, these two goals are fundamentally in conflict: the more compression we allow, the more
+     distorted the messages become. We formalize this intuition and prove an  uncertainty principle for
+     randomized compression operators, thus quantifying this limitation mathematically, and
+     effectively providing asymptotically tight lower bounds on what might be achievable with communication
+     compression. Motivated by these developments, we call for the search for the optimal compression
+      operator. In an attempt to take a first step in this direction, we consider an unbiased compression
+       method inspired by the Kashin representation of vectors, which we call Kashin compression (KC).
+       In contrast to all previously proposed compression mechanisms, KC enjoys a dimension independent
+       variance bound for which we derive an explicit formula even in the regime when only a few bits
+       need to be communicate per each vector entry.
+          <br>
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
+
+
           <h3>January 12, 2021</h3>
           <h1>Paper Accepted to ICLR 2021</h1>
-          <br>
+  <br>
     Our paper "A Better Alternative to Error Feedback for Communication-efficient Distributed Learning'', joint work with  <a href="https://samuelhorvath.github.io">Samuel Horváth</a>,  was accepted to
       <a href="https://openreview.net/forum?id=vYVI1CHPaQg">The 9th International Conference on Learning Representations (ICLR 2021)</a>.<br><br>
 
