--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <h1>Paper Accepted to Information and Inference: A Journal of the IMA</h1>
             <br>
           Our paper "Uncertainty Principle for Communication Compression in Distributed and Federated Learning and the Search for an Optimal Compressor”, joint work with  <a href="https://mher-safaryan.github.io">Mher Safaryan</a> and <a href="https://shulgin-egor.github.io">Egor Shulgin</a>,  was accepted to
-      <a href="">Information and Inference: A Journal of the IMA</a>.<br><br>
+      <a href="https://academic.oup.com/imaiai">Information and Inference: A Journal of the IMA</a>.<br><br>
 
     <i>Abstract:</i> In order to mitigate the high communication cost in distributed and federated learning,
     various vector compression schemes, such as quantization, sparsification and dithering, have become
