--- a/index.html
+++ b/index.html
@@ -43,6 +43,52 @@
         <div id="content">
 
 
+          <h3>January 24, 2021</h3>
+          <h1>Spring 2021 Semester Starts at KAUST</h1>
+  <br>
+As of today, the Spring semester starts at KAUST. The timing of this every year conflicts with the endgame before the ICML submission deadline, and this year is no different. Except for Covid-19.
+I am teaching <a href="https://piazza.com/kaust.edu.sa/spring2021/cs332">CS 332: Federated Learning</a> on Sundays and Tuesdays. The first class is today.
+
+
+          <br>
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
+
+
+          <h3>January 23, 2021</h3>
+          <h1>Three Papers Accepted to AISTATS 2021</h1>
+            <br>
+We've had three papers accepted <a href="https://aistats.org/aistats2021/">The 24th International Conference on Artificial Intelligence and Statistics (AISTATS 2021)</a>. The conference will be held virtually during April 13-15, 2021. Here are the papers:<br><br>
+
+
+1. <a href="https://arxiv.org/abs/2011.01697">"A linearly convergent algorithm for decentralized optimization: sending less bits for free!”</a>, joint work with  <a href="https://www.dmitry-kovalev.com">Dmitry Kovalev</a>, <a href="https://scholar.google.com/citations?user=ldJpvE8AAAAJ&hl=en">Anastasia Koloskova</a>, <a href="https://people.epfl.ch/martin.jaggi/?lang=en">Martin Jaggi</a>, and <a href="https://www.sstich.ch">Sebastian U. Stich</a>.<br><br>
+
+<i>Abstract:</i>  Decentralized optimization methods enable on-device training of machine learning models without a central coordinator. In many scenarios communication between devices is energy demanding and time consuming and forms the bottleneck of the entire system.
+We propose a new randomized first-order method which tackles the communication bottleneck by applying randomized compression operators to the communicated messages. By combining our scheme with a new variance reduction technique that progressively throughout the iterations reduces the adverse effect of the injected quantization noise, we obtain the first scheme that converges linearly on strongly convex decentralized problems while using compressed communication only.
+We prove that our method can solve the problems without any increase in the number of communications compared to the baseline which does not perform any communication compression while still allowing for a significant compression factor which depends on the conditioning of the problem and the topology of the network. Our key theoretical findings are supported by numerical experiments. <br> <br>
+
+
+2. <a href="https://arxiv.org/abs/2011.02828">"Local SGD: unified theory and new efficient methods”</a>, joint work with  <a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a> and <a href="https://fhanzely.github.io">Filip Hanzely</a>.<br><br>
+
+<i>Abstract:</i> We present a unified framework for analyzing local SGD methods in the convex and strongly convex regimes for distributed/federated training of supervised machine learning models. We recover several known methods as a special case of our general framework, including Local-SGD/FedAvg, SCAFFOLD, and several variants of SGD not originally designed for federated learning. Our framework covers both the identical and heterogeneous data settings, supports both random and deterministic number of local steps, and can work with a wide array of local stochastic gradient estimators, including shifted estimators which are able to adjust the fixed points of local iterations for faster convergence. As an application of our framework, we develop multiple novel FL optimizers which are superior to existing methods. In particular, we develop the first linearly converging local SGD method which does not require any data homogeneity or other strong assumptions. <br> <br>
+
+3. "Hyperparameter transfer learning with adaptive complexity”, joint work with  <a href="https://samuelhorvath.github.io">Samuel Horváth</a> and <a href="https://aaronkl.github.io">Aaron Klein</a>, and <a href="http://www0.cs.ucl.ac.uk/staff/c.archambeau/">Cedric Archambeau</a>.<br>
+
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
+
+
+
           <h3>January 22, 2021</h3>
           <h1>Paper Accepted to Information and Inference: A Journal of the IMA</h1>
             <br>
