--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ I am teaching <a href="https://piazza.com/kaust.edu.sa/spring2021/cs332">CS 332:
           <h3>January 23, 2021</h3>
           <h1>Three Papers Accepted to AISTATS 2021</h1>
             <br>
-We've had three papers accepted <a href="https://aistats.org/aistats2021/">The 24th International Conference on Artificial Intelligence and Statistics (AISTATS 2021)</a>. The conference will be held virtually during April 13-15, 2021. Here are the papers:<br><br>
+We've had some papers accepted to <a href="https://aistats.org/aistats2021/">The 24th International Conference on Artificial Intelligence and Statistics (AISTATS 2021)</a>. The conference will be held virtually during April 13-15, 2021. Here are the papers:<br><br>
 
 
 1. <a href="https://arxiv.org/abs/2011.01697">"A linearly convergent algorithm for decentralized optimization: sending less bits for free!”</a>, joint work with  <a href="https://www.dmitry-kovalev.com">Dmitry Kovalev</a>, <a href="https://scholar.google.com/citations?user=ldJpvE8AAAAJ&hl=en">Anastasia Koloskova</a>, <a href="https://people.epfl.ch/martin.jaggi/?lang=en">Martin Jaggi</a>, and <a href="https://www.sstich.ch">Sebastian U. Stich</a>.<br><br>
