--- a/i_papers.html
+++ b/i_papers.html
@@ -391,8 +391,8 @@
           [101] Eduard Gorbunov, Filip Hanzely and Peter Richtárik<br>
           <b>A unified theory of SGD: variance reduction, sampling,
             quantization and coordinate descent</b><br>
-          The 23rd International Conference on Artificial Intelligence
-          and Statistics (AISTATS 2020)<br>
+          <a href="http://proceedings.mlr.press/v108/gorbunov20a">The 23rd International Conference on Artificial Intelligence
+          and Statistics (AISTATS 2020)</a><br>
           [<a href="https://arxiv.org/abs/1905.11261">arXiv</a>]<br>
           <br>
 
