--- a/i_team.html
+++ b/i_team.html
@@ -97,10 +97,11 @@
           <h2> Research Interns</h2>
           <ul>
 
-            <li>Bokun Wang (University of California, Davis), 9/2020-present<br> </li>
+            <li><a href="https://scholar.google.com/citations?user=G2OzFpIAAAAJ&hl=en">Ilyas Fatkhullin</a> (Moscow Institute of Physics and Technology), scheduled for 3/2021-8/2021 </li>
+            <li>Bokun Wang (University of California, Davis), 9/2020-present </li>
             <li><a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a> (Moscow Institute of Physics and Technology), 9/2020-present<br> </li>
             <li>Wenlin Chen (University of Cambridge), 8/2020-9/2020</li>
-            <li><a href="https://rustem-islamov.github.io">Rustem Islamov</a> (Moscow Institute of Physics and Technology), 6/2020-present</li>
+            <li><a href="https://rustem-islamov.github.io">Rustem Islamov</a> (Moscow Institute of Physics and Technology), 6/2020-11/2020</li>
             <li><a href="https://othmanesebbouh.github.io">Othmane Sebbouh</a> (Ecole Polytechnique), 5/2020-6/2020</li>
             <li><a href="https://rka97.github.io">Ahmed Khaled</a> (Cairo University), 4/2020-11/2020</li>
             <li><a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a> (Moscow Institute of Physics and Technology), 2/2020-3/2020<br> </li>
@@ -109,7 +110,7 @@
             <li><a href="https://grigory-malinovsky.github.io">Grigory Malinovsky</a> (Moscow Institute of Physics and Technology), 1/2020-2/2020<br> </li>
             <li><a href="https://www.imo-official.org/participant_r.aspx?id=26060">Hoang H. Nguyen</a> (Minerva Schools at KGI), 10/2019-12/2019<br>  </li>
             <li><a href="https://rka97.github.io">Ahmed Khaled</a> (Cairo University), 6/2019-9/2019</li>
-            <li><a href="https://github.com/Selim78">Sélim Chraibi</a> (Grenoble, Rhône-Alpes), 4/2019-9/2019<br> </li>
+            <li><a href="https://github.com/Selim78">Sélim Chraibi</a> (Grenoble, Rhône-Alpes), 4/2019-9/2019 </li>
             <li> Ľudovít Horváth (Comenius University), 2/2019-3/2019 <br> </li>
             <li> <a href="https://www.researchgate.net/profile/Igor_Sokolov14">Igor Sokolov</a> (Moscow Institute of Physics and Technology), 1/2019-2/2019</li>
             <li><a href="https://eduardgorbunov.github.io/index.html#header3-a">Eduard Gorbunov</a> (Moscow Institute of Physics and Technology), 1/2019-2/2019<br> </li>
