--- a/index.html
+++ b/index.html
@@ -43,14 +43,34 @@
         <div id="content">
 
 
+          <h3>February 10, 2021</h3>
+          <h1>Best Paper Award @ NeurIPS SipcyFL 2020</h1>
+  <br>
+    Super happy about this surprise prize; and huge congratulations to my outstanding student and collaborator <a href="https://samuelhorvath.github.io">Samuel Horváth</a>.
+    The paper was recently accepted to <a href="https://openreview.net/forum?id=vYVI1CHPaQg">ICLR 2021</a>, check it out!
+
+<br>
+<br>
+<img alt="" src="imgs/NeurIPS-2020-SpicyFL-Prize.jpeg" width="600" >
+          <br>
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
+
+
+
           <h3>January 24, 2021</h3>
           <h1>Spring 2021 Semester Starts at KAUST</h1>
   <br>
 As of today, the Spring semester starts at KAUST. The timing of this every year conflicts with the endgame before the ICML submission deadline, and this year is no different. Except for Covid-19.
 I am teaching <a href="https://piazza.com/kaust.edu.sa/spring2021/cs332">CS 332: Federated Learning</a> on Sundays and Tuesdays. The first class is today.
+  <br>
 
 
-          <br>
 
           <br>
           <br>
