--- a/index.html
+++ b/index.html
@@ -43,6 +43,42 @@
         <div id="content">
 
 
+
+          <h3>February 15, 2021</h3>
+          <h1>New Paper</h1>
+          <br>
+
+          <span class="important">New paper out: </span>
+          <a href="https://arxiv.org/abs/2102.06704">"Proximal and Federated Random Reshuffling"</a> -
+          joint work with <a href="https://konstmish.github.io">Konstantin Mishchenko</a>, and
+          <a href="https://rka97.github.io">Ahmed Khaled</a>.<br>
+          <br>
+
+          Abstract: <i>
+            Random Reshuffling (RR), also known as Stochastic Gradient Descent (SGD) without replacement, is a popular and
+            theoretically grounded method for finite-sum minimization. We propose two new algorithms: Proximal and Federated
+            Random Reshuffing (ProxRR and FedRR). The first algorithm, ProxRR, solves composite convex finite-sum minimization
+            problems in which the objective is the sum of a (potentially non-smooth) convex regularizer and an average of n smooth
+            objectives. We obtain the second algorithm, FedRR, as a special case of ProxRR applied to a reformulation of distributed
+            problems with either homogeneous or heterogeneous data. We study the algorithms' convergence properties with constant
+            and decreasing stepsizes, and show that they have considerable advantages over Proximal and Local SGD. In particular,
+            our methods have superior complexities and ProxRR evaluates the proximal operator once per epoch only. When the proximal
+            operator is expensive to compute, this small difference makes ProxRR up to n times faster than algorithms that evaluate
+            the proximal operator in every iteration. We give examples of practical optimization tasks where the proximal operator
+            is difficult to compute and ProxRR has a clear advantage. Finally, we corroborate our results with experiments on real
+            data sets.
+          </i>
+          <br>
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
+
+
+
           <h3>February 10, 2021</h3>
           <h1>Best Paper Award @ NeurIPS SipcyFL 2020</h1>
   <br>
