--- a/i_papers.html
+++ b/i_papers.html
@@ -51,6 +51,16 @@
 
           <h1> Prepared in 2020 </h1>
 
+          [154] Mher Safaryan, Filip Hanzely and Peter Richtárik<br>
+          <b>Smoothness matrices beat smoothness constants: better communication compression techniques for distributed optimization</b><br>
+          [<a href="https://arxiv.org/abs/2102.07245">arXiv</a>]  <br>
+          <br>
+
+          [153] Rustem Islamov, Xun Qian, and Peter Richtárik<br>
+          <b>Distributed second order methods with fast rates and compressed communication</b><br>
+          [<a href="https://arxiv.org/abs/2102.07158">arXiv</a>]  <br>
+          <br>
+
           [152] Konstantin Mishchenko, Ahmed Khaled, and Peter Richtárik<br>
           <b>Proximal and federated random reshuffling</b><br>
           [<a href="https://arxiv.org/abs/2102.06704">arXiv</a>]  <br>
