--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
            Large scale distributed optimization has become the default tool for the training of supervised machine
            learning models with a large number of parameters and training data. Recent advancements in the field
            provide several mechanisms for speeding up the training, including compressed communication, variance
-           reduction and acceleration. However, none of these methods is capable of exploiting the inherently rich data-dependent smoothness 
+           reduction and acceleration. However, none of these methods is capable of exploiting the inherently rich data-dependent smoothness
            structure of the local losses beyond standard smoothness constants. In this paper, we argue that when
-           training supervised models, {\em smoothness matrices} -- information-rich generalizations of the ubiquitous
+           training supervised models, smoothness matrices -- information-rich generalizations of the ubiquitous
            smoothness constants -- can and should be exploited for further dramatic gains, both in theory and practice.
            In order to further alleviate the communication burden inherent in distributed optimization, we propose a
            novel communication sparsification strategy that can take full advantage of the smoothness matrices
