--- a/i_talks.html
+++ b/i_talks.html
@@ -45,11 +45,7 @@
         <div id="content">
 
 
-<h1> Future Talks</h1>
-
-<p>
-AMCS/STAT Graduate Seminar, KAUST, April 22, 2021
-</p>
+<h1> Postponed Talks</h1>
 
 <p>
 "Optimization for Machine Learning", <a href="https://ima.org.uk/14347/14347/">3rd Mathematics of Operational Research conference</a>, Aston University, Birmingham (UK),  April 22-23, 2021
@@ -81,29 +77,15 @@ AI: Collaborate and Accelerate, College of Computer Sciences and Information Tec
 Research Seminar, EPFL, Switzerland, April 3, 2020 (invited) <span class="important">postponed due to Covid-19</span>
 </p>
 
-
-<p>
-2020 Workshop on Federated Learning and Analytics, Google, Seattle, July 30-31, 2020 (invited)
-</p>
-
-
 <p>
 <a href="https://www.google.com/search?client=safari&amp;rls=en&amp;q=IFORS+2020&amp;ie=UTF-8&amp;oe=UTF-8">IFORS 2020</a>, Coex, Seoul, Korea, June 21-26, 2020 (invited
 session organizer) <span class="important">postponed due to Covid-19</span>
 </p>
 
-
-
 <p>
 <a href="https://www.aistats.org">AISTATS 2020</a>, Palermo, Sicily, Italy, June 3-5, 2020 (accepted papers <a href="https://arxiv.org/abs/1909.04746">1</a> <a href="https://arxiv.org/abs/1905.11373">2</a> <a href="https://arxiv.org/abs/1905.11261">3</a>)
-<span class="important">postponed due to Covid-19</span>
 </p>
 
-
-
-<p>
-<a href="https://iclr.cc/Conferences/2020/">ICLR 2020</a>, Addis Ababa, Ethiopia, April 26-30, 2020 <span class="important">virtual-only due to Covid-19</span> (accepted <a href="https://arxiv.org/abs/1905.13278">paper</a>)
-</p>
 
 
 
@@ -138,8 +120,7 @@ Simons Institute, Berkeley, 9/2018
 
 <p>
 <a href="https://slideslive.com/38917651/convex-optimization">SGD:
-General Analysis and Improved Rates</a> (start: 35:40 end:
-53:11) <br>
+General Analysis and Improved Rates</a> (start: 35:40 end: 53:11) <br>
 ICML 2019
 </p>
 
@@ -162,9 +143,7 @@ href="https://comm.medias.polytechnique.fr/videos/richtarik_2_randonoptimization
 href="https://comm.medias.polytechnique.fr/videos/richtarik_3_randonopti_08033/">3</a>
 <a
 href="https://comm.medias.polytechnique.fr/videos/richtarik_4_randonoptimization/">4</a>
-<a
-href="https://comm.medias.polytechnique.fr/videos/richtarik_5_randonoptimization/">5</a>
-(5 hrs)<br>
+<a href="https://comm.medias.polytechnique.fr/videos/richtarik_5_randonoptimization/">5</a> (5 hrs)<br>
 Ecole Polytechnique, France, 8/2017
 </p>
 
@@ -186,9 +165,22 @@ Simons Institute, Berkeley, 10/2013
 
 
 
+<h1>2021 Talks</h1>
+
+<p>
+AMCS/STAT Graduate Seminar, KAUST, April 22, 2021 (invited)
+</p>
+
+<p>
+All Russian Seminar on Optimization, virtual, April 21, 2021 (invited)
+</p>
+
+<p>
+[172] Research Seminar, <a href="https://mbzuai.ac.ae">MBZUAI</a>, Abu Dhabi, Febraury 16, 2021 (invited)
+</p>
+
+
 <h1>2020 Talks</h1>
-
-
 
 <p>
 [171] Apple's Workshop on Privacy Preserving Machine Learning, August 25-26, 2020 (invited)
@@ -998,139 +990,21 @@ Parisienne in Computation, Inference and Optimization</a>, Paris,
               SIAM Student Chapter</a> conference, March 6, 2013
             (invited) [<a href="talks/TALK-2013-02-SIAM-Conference.ppsx">slides</a>]<br>
           </p>
-          <p>[51] <a
+
+
+<p>[51] <a
               href="http://www.icms.org.uk/workshops/bigdata#programme">Big
-Data
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-              and Social Media</a>, Glasgow, UK, February 26, 2013
+Data and Social Media</a>, Glasgow, UK, February 26, 2013
             (invited by Des Higham) [<a
               href="talks/TALK-2013-02-Big-Data-and-Social-Media.ppsx">slides</a>]
           </p>
           <p>[50] Research Recap, Innovative Learning Week, February 21,
             2013 <a href="talks/ILW.ppsx"> [slides - 15 mins]<br>
             </a></p>
+
+
           <p>[49] <a href="http://www.uclouvain.be/en-44416.html">Mathematical
-Optimization
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-              Seminar</a>, CORE, Louvain-la-Neuve, Belgium, February 5,
+Optimization  Seminar</a>, CORE, Louvain-la-Neuve, Belgium, February 5,
             2013 (invited by Yurii Nesterov) <br>
           </p>
           <p>[48] <a
