--- a/i_papers.html
+++ b/i_papers.html
@@ -49,22 +49,36 @@
           <br>
           <meta charset="utf-8">
 
-          <h1> Prepared in 2020 </h1>
+          <h1> Prepared in 2021 </h1>
+
+          [156] Konstantin Mishchenko, Bokun Wang, Dmitry Kovalev and Peter Richtárik<br>
+          <b>IntSGD: Floatless compression of stochastic gradients</b><br>
+          [<a href="https://arxiv.org/abs/2102.08374">arXiv</a>]  <br>
+          <br>
+
+          [155] Eduard Gorbunov, Konstantin Burlachenko, Zhize Li and Peter Richtárik<br>
+          <b>MARINA: faster non-convex distributed learning with compression </b><br>
+          [<a href="https://arxiv.org/abs/2102.07845">arXiv</a>]  <br>
+          <br>
 
           [154] Mher Safaryan, Filip Hanzely and Peter Richtárik<br>
           <b>Smoothness matrices beat smoothness constants: better communication compression techniques for distributed optimization</b><br>
           [<a href="https://arxiv.org/abs/2102.07245">arXiv</a>]  <br>
           <br>
 
-          [153] Rustem Islamov, Xun Qian, and Peter Richtárik<br>
+          [153] Rustem Islamov, Xun Qian and Peter Richtárik<br>
           <b>Distributed second order methods with fast rates and compressed communication</b><br>
           [<a href="https://arxiv.org/abs/2102.07158">arXiv</a>]  <br>
           <br>
 
-          [152] Konstantin Mishchenko, Ahmed Khaled, and Peter Richtárik<br>
+          [152] Konstantin Mishchenko, Ahmed Khaled and Peter Richtárik<br>
           <b>Proximal and federated random reshuffling</b><br>
           [<a href="https://arxiv.org/abs/2102.06704">arXiv</a>]  <br>
           <br>
+
+
+          <h1> Prepared in 2020 </h1>
+
 
           [151] Samuel Horváth, Aaron Klein, Peter Richtárik and Cedric Archambeau<br>
           <b>Hyperparameter transfer learning with adaptive complexity</b><br>
