--- a/index.html
+++ b/index.html
@@ -43,6 +43,45 @@
         <div id="content">
 
 
+          <h3>February 15, 2021</h3>
+          <h1>New Paper</h1>
+          <br>
+
+          <span class="important">New paper out: </span>
+          <a href="https://arxiv.org/abs/2102.07245">"MARINA: Faster Non-Convex Distributed Learning with Compression"</a> -
+          joint work with <a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a>, and
+          <a href="https://burlachenkok.github.io/home">Konstantin Burlachenko</a> and <a href="https://zhizeli.github.io">Zhize Li</a>.<br>
+          <br>
+
+          Abstract: <i>
+          We develop and analyze MARINA: a new communication efficient method for non-convex distributed learning over heterogeneous datasets. MARINA employs a novel communication compression strategy based on the compression of gradient differences which is reminiscent of but different from the strategy employed in the DIANA method of Mishchenko et al (2019). Unlike virtually all competing distributed first-order methods, including DIANA, ours is based on a carefully designed biased gradient estimator, which is the key to its superior theoretical and practical performance. To the best of our knowledge, the communication complexity bounds we prove for MARINA are strictly superior to those of all previous first order methods. Further, we develop and analyze two variants of MARINA: VR-MARINA and PP-MARINA. The first method is designed for the case when the local loss functions owned by clients are either of a finite sum or of an expectation form, and the second method allows for partial participation of clients -- a feature important in federated learning. All our methods are superior to previous state-of-the-art methods in terms of the oracle/communication complexity. Finally, we provide convergence analysis of all methods for problems satisfying the Polyak-Lojasiewicz condition.
+          </i>
+          <br>
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
+
+
+
+          <h3>February 16, 2021</h3>
+          <h1>Talk at MBZUAI</h1>
+          <br>
+
+          Today I gave a research seminar talk at <a href="https://mbzuai.ac.ae">MBZUAI.</a> I spoke about randomized second order methods.
+          <br>
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
+
+
           <h3>February 14, 2021</h3>
           <h1>New Paper</h1>
           <br>
