--- a/i_papers.html
+++ b/i_papers.html
@@ -53,27 +53,32 @@
 
           [156] Konstantin Mishchenko, Bokun Wang, Dmitry Kovalev and Peter Richtárik<br>
           <b>IntSGD: Floatless compression of stochastic gradients</b><br>
-          [<a href="https://arxiv.org/abs/2102.08374">arXiv</a>]  <br>
+          <span class="important">Federated Learning Paper</span><br>
+          [<a href="https://arxiv.org/abs/2102.08374">arXiv</a>] [code: IntSGD, IntDIANA] <br>
           <br>
 
           [155] Eduard Gorbunov, Konstantin Burlachenko, Zhize Li and Peter Richtárik<br>
           <b>MARINA: faster non-convex distributed learning with compression </b><br>
-          [<a href="https://arxiv.org/abs/2102.07845">arXiv</a>]  <br>
+          <span class="important">Federated Learning Paper</span><br>
+          [<a href="https://arxiv.org/abs/2102.07845">arXiv</a>] [code: MARINA, VR-MARINA, PP-MARINA]  <br>
           <br>
 
           [154] Mher Safaryan, Filip Hanzely and Peter Richtárik<br>
           <b>Smoothness matrices beat smoothness constants: better communication compression techniques for distributed optimization</b><br>
-          [<a href="https://arxiv.org/abs/2102.07245">arXiv</a>]  <br>
+          <span class="important">Federated Learning Paper</span><br>
+          [<a href="https://arxiv.org/abs/2102.07245">arXiv</a>] [code: DCGD+, DIANA+, ADIANA+] <br>
           <br>
 
           [153] Rustem Islamov, Xun Qian and Peter Richtárik<br>
           <b>Distributed second order methods with fast rates and compressed communication</b><br>
-          [<a href="https://arxiv.org/abs/2102.07158">arXiv</a>]  <br>
+          <span class="important">Federated Learning Paper</span><br>
+          [<a href="https://arxiv.org/abs/2102.07158">arXiv</a>] [code: NS, MN, NL1, NL2, CNL]  <br>
           <br>
 
           [152] Konstantin Mishchenko, Ahmed Khaled and Peter Richtárik<br>
           <b>Proximal and federated random reshuffling</b><br>
-          [<a href="https://arxiv.org/abs/2102.06704">arXiv</a>]  <br>
+          <span class="important">Federated Learning Paper</span><br>
+          [<a href="https://arxiv.org/abs/2102.06704">arXiv</a>] [code:ProxRR, FedRR] <br>
           <br>
 
 
