--- a/index.html
+++ b/index.html
@@ -43,6 +43,48 @@
         <div id="content">
 
 
+          <h3>February 16, 2021</h3>
+          <h1>New Paper</h1>
+          <br>
+
+          <span class="important">New paper out: </span>
+          <a href="https://arxiv.org/abs/2102.07245">"IntSGD: Floatless Compression of Stochastic Gradients"</a> -
+          joint work with <a href="http://konstmish.github.io">Konstantin Mishchenko</a>, and
+          <a href="https://scholar.google.com/citations?user=H9GqvAYAAAAJ&hl=en">Bokun Wang</a> and <a href="http://dmitry-kovalev.com">Dmitry Kovalev</a>.<br>
+          <br>
+
+          Abstract: <i>
+          We propose a family of lossy integer compressions for Stochastic Gradient Descent (SGD) that do not communicate a single float. This is achieved by multiplying floating-point vectors with a number known to every device and then rounding to an integer number. Our theory shows that the iteration complexity of SGD does not change up to constant factors when the vectors are scaled properly. Moreover, this holds for both convex and non-convex functions, with and without overparameterization. In contrast to other compression-based algorithms, ours preserves the convergence rate of SGD even on non-smooth problems. Finally, we show that when the data is significantly heterogeneous, it may become increasingly hard to keep the integers bounded and propose an alternative algorithm, IntDIANA, to solve this type of problems.
+          </i>
+          <br>
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
+
+
+
+
+          <h3>February 16, 2021</h3>
+          <h1>Talk at MBZUAI</h1>
+          <br>
+
+          Today I gave a research seminar talk at <a href="https://mbzuai.ac.ae">MBZUAI.</a> I spoke about randomized second order methods.
+          <br>
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
+
+
+
+
           <h3>February 15, 2021</h3>
           <h1>New Paper</h1>
           <br>
@@ -64,21 +106,6 @@
           <br>
           <br>
 
-
-
-
-          <h3>February 16, 2021</h3>
-          <h1>Talk at MBZUAI</h1>
-          <br>
-
-          Today I gave a research seminar talk at <a href="https://mbzuai.ac.ae">MBZUAI.</a> I spoke about randomized second order methods.
-          <br>
-
-          <br>
-          <br>
-          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
-          <br>
-          <br>
 
 
 
