--- a/i_papers.html
+++ b/i_papers.html
@@ -51,6 +51,11 @@
 
           <h1> Prepared in 2021 </h1>
 
+          [157] Dmitry Kovalev, Egor Shulgin, Peter Richtárik, Alexander Rogozin, and Alexander Gasnikov<br>
+          <b>ADOM: Accelerated decentralized optimization method for time-varying networks</b><br>
+          [<a href="https://arxiv.org/abs/2102.09234">arXiv</a>] [code: ADOM] <br>
+          <br>
+          
           [156] Konstantin Mishchenko, Bokun Wang, Dmitry Kovalev and Peter Richtárik<br>
           <b>IntSGD: Floatless compression of stochastic gradients</b><br>
           <span class="important">Federated Learning Paper</span><br>
