--- a/index.html
+++ b/index.html
@@ -43,6 +43,39 @@
         <div id="content">
 
 
+
+
+          <h3>February 18, 2021</h3>
+          <h1>New Paper</h1>
+          <br>
+
+          <span class="important">New paper out: </span>
+          <a href="https://arxiv.org/abs/2102.09234">"ADOM: Accelerated Decentralized Optimization Method for Time-Varying Networks"</a> -
+          joint work with <a href="http://dmitry-kovalev.com">Dmitry Kovalev</a>, <a href="https://shulgin-egor.github.io">Egor Shulgin</a>, <a href="https://scholar.google.com/citations?hl=ru&user=sEjyzkgAAAAJ">Alexander Rogozin</a>, and
+          <a href="https://mipt.ru/education/chairs/dm/staff/gasnikov-aleksandr-vladimirovich.php">Alexander Gasnikov</a>.<br>
+          <br>
+
+          Abstract: <i>
+          We propose ADOM - an accelerated method for smooth and strongly convex decentralized optimization over time-varying networks.
+          ADOM uses a dual oracle, i.e., we assume access to the gradient of the Fenchel conjugate of the individual loss functions.
+          Up to a constant factor, which depends on the network structure only, its communication complexity is the same as that of
+          accelerated Nesterov gradient method (Nesterov, 2003). To the best of our knowledge, only the algorithm of Rogozin et al. (2019)
+          has a convergence rate with similar properties. However, their algorithm converges under the very restrictive assumption that
+          the number of network changes can not be greater than a tiny percentage of the number of iterations. This assumption is hard
+          to satisfy in practice, as the network topology changes usually can not be controlled. In contrast, ADOM merely requires the
+          network to stay connected throughout time.
+          </i>
+          <br>
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
+
+
+
           <h3>February 16, 2021</h3>
           <h1>New Paper</h1>
           <br>
