--- a/index.html
+++ b/index.html
@@ -43,6 +43,68 @@
         <div id="content">
 
 
+          <h3>February 22, 2021</h3>
+          <h1>New Paper</h1>
+          <br>
+
+          <span class="important">New paper out: </span>
+          <a href="https://arxiv.org/abs/2102.09700">"An Optimal Algorithm for Strongly Convex Minimization under Affine Constraints"</a> -
+          joint work with
+          <a href="https://adil-salim.github.io">Adil Salim</a>,
+          <a href="https://lcondat.github.io">Laurent Condat</a> and
+          <a href="https://www.dmitry-kovalev.com">Dmitry Kovalev</a>.<br>
+          <br>
+
+          Abstract: <i>
+           Optimization problems under affine constraints appear in various areas of machine learning. We consider the task of
+           minimizing a smooth strongly convex function $F(x)$ under the affine constraint $Kx=b$, with an oracle providing evaluations
+           of the gradient of $F$ and matrix-vector multiplications by $K$ and its transpose. We provide lower bounds on the number of 
+           gradient computations and matrix-vector multiplications to achieve a given accuracy. Then we propose an accelerated
+           primal--dual algorithm achieving these lower bounds. Our algorithm is the first optimal algorithm for this class of
+           problems.
+          </i>
+          <br>
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
+
+
+
+          <h3>February 19, 2021</h3>
+          <h1>New Paper</h1>
+          <br>
+
+          <span class="important">New paper out: </span>
+          <a href="https://arxiv.org/abs/2102.09700">"AI-SARAH: Adaptive and Implicit Stochastic Recursive Gradient Methods"</a> -
+          joint work with
+          <a href="https://coral.ise.lehigh.edu/zhs310/">Zheng Shi</a>,
+          <a href="https://nicolasloizou.github.io">Nicolas Loizou</a> and
+          <a href="https://engineering.lehigh.edu/faculty/martin-takac">Martin Takáč</a>.<br>
+          <br>
+
+          Abstract: <i>
+           We present an adaptive stochastic variance reduced method with an implicit approach for adaptivity.
+           As a variant of SARAH, our method employs the stochastic recursive gradient yet adjusts step-size
+           based on local geometry. We provide convergence guarantees for finite-sum minimization problems
+           and show a faster convergence than SARAH can be achieved if local geometry permits. Furthermore,
+           we propose a practical, fully adaptive variant, which does not require any knowledge of local geometry
+           and any effort of tuning the hyper-parameters. This algorithm implicitly computes step-size and
+           efficiently estimates local Lipschitz smoothness of stochastic functions. The numerical experiments
+           demonstrate the algorithm's strong performance compared to its classical counterparts and other
+           state-of-the-art first-order methods.
+          </i>
+          <br>
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
 
 
           <h3>February 18, 2021</h3>
