--- a/i_papers.html
+++ b/i_papers.html
@@ -51,7 +51,17 @@
 
           <h1> Prepared in 2021 </h1>
 
-          [157] Dmitry Kovalev, Egor Shulgin, Peter Richtárik, Alexander Rogozin, and Alexander Gasnikov<br>
+          [159] Adil Salim, Laurent Condat, Dmitry Kovalev and Peter Richtárik<br>
+          <b>An optimal algorithm for strongly convex minimization under affine constraints</b><br>
+          [<a href="https://arxiv.org/abs/2102.11079">arXiv</a>]  <br>
+          <br>
+
+          [158] Zhen Shi, Nicolas Loizou, Peter Richtárik and Martin Takáč<br>
+          <b>AI-SARAH: Adaptive and implicit stochastic recursive gradient methods</b><br>
+          [<a href="https://arxiv.org/abs/2102.09700">arXiv</a>] [code: AI-SARAH] <br>
+          <br>
+
+          [157] Dmitry Kovalev, Egor Shulgin, Peter Richtárik, Alexander Rogozin and Alexander Gasnikov<br>
           <b>ADOM: Accelerated decentralized optimization method for time-varying networks</b><br>
           [<a href="https://arxiv.org/abs/2102.09234">arXiv</a>] [code: ADOM] <br>
           <br>
@@ -93,7 +103,7 @@
           [151] Samuel Horváth, Aaron Klein, Peter Richtárik and Cedric Archambeau<br>
           <b>Hyperparameter transfer learning with adaptive complexity</b><br>
           The 24th International Conference on Artificial Intelligence and Statistics (AISTATS 2021) <br>
-          [arXiv]  <br>
+          [<a href="https://arxiv.org/abs/2102.12810">arXiv</a>]  <br>
           <br>
 
           [150] Xun Qian, Hanze Dong, Peter Richtárik and Tong Zhang<br>
