--- a/index.html
+++ b/index.html
@@ -43,6 +43,49 @@
         <div id="content">
 
 
+          <h3>March 19, 2021</h3>
+          <h1>Area Chair for NeurIPS 2021</h1>
+          <br>
+
+
+
+          I will serve as an Area Chair for NeurIPS 2021, to be held during December 6-14, 2021 virtually ( = same location as last year ;-).
+
+
+          <br>
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
+
+
+
+
+          <h3>March 1, 2021</h3>
+          <h1>New PhD Student: Lukang Sun</h1>
+          <br>
+
+
+        Lukang Sun has joined my group as a PhD student. Welcome!!!
+
+        Lukang has an MPhil degree in mathematics form Nanjing Univeristy, China (2020), and a BA in mathematics from Jilin Univeristy, China (2017). His thesis (written in Chinese) was on the topic of
+        "Harmonic functions on metric measure spaces". In this work, Lukang proposed some novel methods using optimal transport theory to generalize some results from Riemannian manifolds to metric measure
+        spaces. Lukang has held visiting/exchange/temporary positions at the Hong Kong Universiy of Science and Technology, Georgia Institue of Technology and the Chinese University of Hong Kong.
+
+
+          <br>
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
+
+
           <h3>February 22, 2021</h3>
           <h1>New Paper</h1>
           <br>
