--- a/i_events.html
+++ b/i_events.html
@@ -51,6 +51,17 @@ Below is a list of conferences, and workshops I am/was involved with as an organ
 
 <ol reversed>
 
+
+    <li> <a href="https://nips.cc/Conferences/2021"><b> NeurIPS 2021</b></a>, Virtual, December 6-14, 2021
+
+    <ul>
+      <li> Area Chair </li>
+    </ul>
+
+    </li>
+
+
+
   <li><a href="https://icml.cc/Conferences/2021"><b>ICML 2021</b></a>, Virtual, July 18-24, 2021
 
   <ul>
@@ -96,29 +107,6 @@ Below is a list of conferences, and workshops I am/was involved with as an organ
 
 </li>
 
-<li> <a href="https://nips.cc"><b> NeurIPS 2020</b></a>, Virtual, December 5-12, 2020
-
-<ul>
-  <li> Area Chair </li>
-</ul>
-
-</li>
-
-
-<li><a href="http://fl-ijcai20.federated-learning.org"><b>IJCAI 2020: International Workshop on Federated Learning for User Privacy and Data Confidentiality</b></a>, Yokohama, Japan, July 13, 2020
-
-<ul>
-  <li> Program Committee Member </li>
-</ul>
-</li>
-
-
-<li><a href="https://ijcai20.org"><b>IJCAI-PRICAI 2020</b></a>, Yokohama, Japan, July 11-17, 2020
-
-<ul>
-  <li> Senior Program Committee Member </li>
-</ul>
-</li>
 
 
 
@@ -134,6 +122,30 @@ Below is a list of conferences, and workshops I am/was involved with as an organ
 
 <ol reversed>
 
+
+  <li> <a href="https://nips.cc"><b> NeurIPS 2020</b></a>, Virtual, December 5-12, 2020
+
+  <ul>
+    <li> Area Chair </li>
+  </ul>
+
+  </li>
+
+
+  <li><a href="http://fl-ijcai20.federated-learning.org"><b>IJCAI 2020: International Workshop on Federated Learning for User Privacy and Data Confidentiality</b></a>, Yokohama, Japan, July 13, 2020
+
+  <ul>
+    <li> Program Committee Member </li>
+  </ul>
+  </li>
+
+
+  <li><a href="https://ijcai20.org"><b>IJCAI-PRICAI 2020</b></a>, Yokohama, Japan, July 11-17, 2020
+
+  <ul>
+    <li> Senior Program Committee Member </li>
+  </ul>
+  </li>
 
 
   <li><a href="http://federated-learning.org/fl-icml-2020/"><b>ICML 2020: International Workshop on Federated Learning for User Privacy and Data Confidentiality</b></a>, Virtual, July 17-18, 2020
