--- a/i_team.html
+++ b/i_team.html
@@ -69,6 +69,7 @@
 
           <h2>PhD Students </h2>
           <ul>
+            <li>Lukang Sun (3/2021-present)</li>
             <li><a href="https://cemse.kaust.edu.sa/news/meet-kaust-student-konstantin-burlachenko?fbclid=IwAR2KCPy-X1C4Ls8u9rhlkNwqdRqONaKPqHdXzmBq_lSNDpOjGxVBM-o0DZE">Konstantin Burlachenko</a> (08/2020-present)</li>
             <li><a href="https://www.dmitry-kovalev.com/">Dmitry Kovalev</a> (1/2020-present)</li>
             <li><a href="http://elnurgasanov.me">Elnur Gasanov</a> (1/2020-present)</li>
@@ -83,6 +84,7 @@
 
           <h2>MS Students </h2>
           <ul>
+
             <li>Igor Sokolov (8/2020-present)</li>
             <li><a href="https://grigory-malinovsky.github.io">Grigory Malinovsky</a> (8/2020-present)</li>
             <li><a href="https://shulgin-egor.github.io">Egor Shulgin</a> (1/2020-present)</li>
@@ -91,38 +93,41 @@
             <li><a href="http://elnurgasanov.me">Elnur Gasanov</a> (9/2018-12/2019)</li>
             <li><a href="https://www.dmitry-kovalev.com/">Dmitry Kovalev</a> (9/2018-12/2019)</li>
             <li><a href="https://samuelhorvath.github.io">Samuel Horváth</a> (8/2017-12/2018)</li>
-            <li><a href="https://vcc.kaust.edu.sa/Pages/Sailanbayev.aspx">Alibek Sailanbayev</a> (8/2017-12/2018)<br> </li>
+            <li><a href="https://vcc.kaust.edu.sa/Pages/Sailanbayev.aspx">Alibek Sailanbayev</a> (8/2017-12/2018)</li>
+
           </ul>
 
           <h2> Research Interns</h2>
           <ul>
 
-            <li><a href="https://scholar.google.com/citations?user=G2OzFpIAAAAJ&hl=en">Ilyas Fatkhullin</a> (Moscow Institute of Physics and Technology), scheduled for 3/2021-8/2021 </li>
-            <li>Bokun Wang (University of California, Davis), 9/2020-present </li>
-            <li><a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a> (Moscow Institute of Physics and Technology), 9/2020-present<br> </li>
-            <li>Wenlin Chen (University of Cambridge), 8/2020-9/2020</li>
+            <li><a href="https://scholar.google.com/citations?user=G2OzFpIAAAAJ&hl=en">Ilyas Fatkhullin</a> (Technical University Munich), 3/2021-8/2021 </li>
+            <li><a href="https://rustem-islamov.github.io">Rustem Islamov</a> (Moscow Institute of Physics and Technology), 3/2021-8/2020</li>
+            <li> Bokun Wang (University of California, Davis), 9/2020-3/2021</li>
+            <li><a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a> (Moscow Institute of Physics and Technology), 9/2020-3/2021</li>
+            <li> Wenlin Chen (University of Cambridge), 8/2020-9/2020</li>
             <li><a href="https://rustem-islamov.github.io">Rustem Islamov</a> (Moscow Institute of Physics and Technology), 6/2020-11/2020</li>
             <li><a href="https://othmanesebbouh.github.io">Othmane Sebbouh</a> (Ecole Polytechnique), 5/2020-6/2020</li>
             <li><a href="https://rka97.github.io">Ahmed Khaled</a> (Cairo University), 4/2020-11/2020</li>
-            <li><a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a> (Moscow Institute of Physics and Technology), 2/2020-3/2020<br> </li>
-            <li><a href="https://scholar.google.com/citations?hl=ru&user=sEjyzkgAAAAJ">Alexander Rogozin</a> (Moscow Institute of Physics and Technology), 1/2020-2/2020<br> </li>
-            <li><a href="https://scholar.google.com/citations?user=hVVJR-sAAAAJ&hl=ru">Aleksandr Beznosikov</a> (Moscow Institute of Physics and Technology), 1/2020-2/2020<br> </li>
-            <li><a href="https://grigory-malinovsky.github.io">Grigory Malinovsky</a> (Moscow Institute of Physics and Technology), 1/2020-2/2020<br> </li>
-            <li><a href="https://www.imo-official.org/participant_r.aspx?id=26060">Hoang H. Nguyen</a> (Minerva Schools at KGI), 10/2019-12/2019<br>  </li>
+            <li><a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a> (Moscow Institute of Physics and Technology), 2/2020-3/2020</li>
+            <li><a href="https://scholar.google.com/citations?hl=ru&user=sEjyzkgAAAAJ">Alexander Rogozin</a> (Moscow Institute of Physics and Technology), 1/2020-2/2020</li>
+            <li><a href="https://scholar.google.com/citations?user=hVVJR-sAAAAJ&hl=ru">Aleksandr Beznosikov</a> (Moscow Institute of Physics and Technology), 1/2020-2/2020</li>
+            <li><a href="https://grigory-malinovsky.github.io">Grigory Malinovsky</a> (Moscow Institute of Physics and Technology), 1/2020-2/2020</li>
+            <li><a href="https://www.imo-official.org/participant_r.aspx?id=26060">Hoang H. Nguyen</a> (Minerva Schools at KGI), 10/2019-12/2019</li>
             <li><a href="https://rka97.github.io">Ahmed Khaled</a> (Cairo University), 6/2019-9/2019</li>
             <li><a href="https://github.com/Selim78">Sélim Chraibi</a> (Grenoble, Rhône-Alpes), 4/2019-9/2019 </li>
-            <li> Ľudovít Horváth (Comenius University), 2/2019-3/2019 <br> </li>
+            <li> Ľudovít Horváth (Comenius University), 2/2019-3/2019</li>
             <li> <a href="https://www.researchgate.net/profile/Igor_Sokolov14">Igor Sokolov</a> (Moscow Institute of Physics and Technology), 1/2019-2/2019</li>
-            <li><a href="https://eduardgorbunov.github.io/index.html#header3-a">Eduard Gorbunov</a> (Moscow Institute of Physics and Technology), 1/2019-2/2019<br> </li>
+            <li><a href="https://eduardgorbunov.github.io/index.html#header3-a">Eduard Gorbunov</a> (Moscow Institute of Physics and Technology), 1/2019-2/2019</li>
             <li><a href="https://www.researchgate.net/profile/Vladislav_Elsukov">Vladislav Elsukov</a> (Moscow Institute of Physics and Technology), 1/2019-2/2019</li>
             <li><a href="https://shulgin-egor.github.io">Egor Shulgin</a> (Moscow Institute of Physics and Technology), 1/2019-2/2019</li>
-            <li> Sarah Sachs (Technical University Munich), 3/2018-8/2018<br> </li>
-            <li><a href="https://www.dmitry-kovalev.com">Dmitry Kovalev</a> (Moscow Institute of Physics and Technology), 1/2018-2/2018<br>   </li>
-            <li><a href="http://elnurgasanov.me">Elnur Gasanov</a> (Moscow Institute of Physics and Technology), 1/2018-2/2018 </li>
+            <li> Sarah Sachs (Technical University Munich), 3/2018-8/2018</li>
+            <li><a href="https://www.dmitry-kovalev.com">Dmitry Kovalev</a> (Moscow Institute of Physics and Technology), 1/2018-2/2018</li>
+            <li><a href="http://elnurgasanov.me">Elnur Gasanov</a> (Moscow Institute of Physics and Technology), 1/2018-2/2018</li>
             <li><a href="https://eduardgorbunov.github.io/index.html#header3-a">Eduard Gorbunov</a> (Moscow Institute of Physics and Technology), 1/2018-2/2018</li>
-            <li><a href="https://slavomirhanzely.wordpress.com">Slavomír Hanzely</a> (Comenius University), 1/2018-2/2018<br> </li>
-            <li>Aashutosh Tiwari (IIT Kanpur), 5/2017-7/2017</li>
-            <li><a href="https://sands.kaust.edu.sa/authors/atal-narayan-sahu/">Atal Sahu</a> (IIT Kanpur), 5/2017-7/2017, now: PhD student @ KAUST<br> </li>
+            <li><a href="https://slavomirhanzely.wordpress.com">Slavomír Hanzely</a> (Comenius University), 1/2018-2/2018</li>
+            <li> Aashutosh Tiwari (IIT Kanpur), 5/2017-7/2017</li>
+            <li><a href="https://sands.kaust.edu.sa/authors/atal-narayan-sahu/">Atal Sahu</a> (IIT Kanpur), 5/2017-7/2017, now: PhD student @ KAUST</li>
+
           </ul>
 
           <h2>Visitors</h2>
@@ -130,27 +135,27 @@
           <ul>
             <li><a href="http://sstich.ch">Sebastian Stich</a> (EPFL), 11/2019</li>
             <li><a href="https://grishchenko.org">Dmitriy Grishchenko</a> (Grenoble), 11-12/2019</li>
-            <li><a href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xiuxian Li</a> (Nanyang Technological University), 9/2019<br> </li>
-            <li><a href="http://www.ntu.edu.sg/home/xbresson/">Xavier Bresson</a> (NTU Singapore), 4/2019<br> </li>
-            <li><a href="https://www.hse.ru/en/org/persons/219293044">Alexey Kroshnin</a> (Moscow &amp; Lyon), 4/2019<br> </li>
+            <li><a href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xiuxian Li</a> (Nanyang Technological University), 9/2019</li>
+            <li><a href="http://www.ntu.edu.sg/home/xbresson/">Xavier Bresson</a> (NTU Singapore), 4/2019</li>
+            <li><a href="https://www.hse.ru/en/org/persons/219293044">Alexey Kroshnin</a> (Moscow &amp; Lyon), 4/2019</li>
             <li><a href="https://nicolasloizou.github.io/">Nicolas Loizou</a> (Edinburgh), 4/2019-5/2019</li>
             <li><a href="https://www.researchgate.net/profile/Dmitry_Kamzolov">Dmitry Kamzolov</a> (Moscow Institute of Physics and Technology), 1/2019-2/2019</li>
             <li><a href="https://gowerrobert.github.io/">Robert Gower</a> (Télécom ParisTech), 12/2018</li>
             <li><a href="http://sstich.ch">Sebastian Stich</a> (EPFL), 10-11/2018</li>
-            <li><a href="https://vision.in.tum.de/members/moellenh">Thomas Möllenhoff</a> (Munich), 8/2018<br> </li>
+            <li><a href="https://vision.in.tum.de/members/moellenh">Thomas Möllenhoff</a> (Munich), 8/2018</li>
             <li><a href="https://nicolasloizou.github.io/">Nicolas Loizou</a> (Edinburgh), 1/2018-3/2018</li>
-            <li><a href="http://www.damtp.cam.ac.uk/user/me404/">Matthias Ehrhardt</a> (University of Cambridge), 1/2018-2/2018<br> </li>
-            <li><a href="https://nicolasloizou.github.io/">Nicolas Loizou</a> (Edinburgh), 10/2017-11/2017<br> </li>
-            <li><a href="https://gowerrobert.github.io/">Robert Gower</a> (Télécom ParisTech), 10/2017<br> </li>
-            <li><a href="https://doikov.com">Nikita Doikov</a> (HSE Moscow), 10/2017-11/2017<br> </li>
-            <li><a href="http://sstich.ch">Sebastian Stich</a> (EPFL), 10/2017<br> </li>
+            <li><a href="http://www.damtp.cam.ac.uk/user/me404/">Matthias Ehrhardt</a> (University of Cambridge), 1/2018-2/2018</li>
+            <li><a href="https://nicolasloizou.github.io/">Nicolas Loizou</a> (Edinburgh), 10/2017-11/2017</li>
+            <li><a href="https://gowerrobert.github.io/">Robert Gower</a> (Télécom ParisTech), 10/2017</li>
+            <li><a href="https://doikov.com">Nikita Doikov</a> (HSE Moscow), 10/2017-11/2017</li>
+            <li><a href="http://sstich.ch">Sebastian Stich</a> (EPFL), 10/2017</li>
             <li> <a href="http://mtakac.com">Martin Takáč</a> (Lehigh), 5/2017</li>
             <li><a href="https://cemse.kaust.edu.sa/people/person/alibek-sailanbayev">Alibek Sailanbayev</a> (Nazarbayev University), 4/2017</li>
             <li><a href="http://jakubkonecny.com">Jakub Konečný</a> (Edinburgh), 4/2017</li>
             <li><a href="https://fhanzely.github.io/index.html">Filip Hanzely</a> (Edinburgh), 4/2017-5/2017</li>
             <li><a href="https://grishchenko.org">Dmitriy Grishchenko</a> (HSE Moscow), 4/2017</li>
             <li><a href="https://konstmish.github.io/">Konstantin Mishchenko</a> (ENS/Paris Dauphine), 4/2017</li>
-            <li><a href="https://nicolasloizou.github.io/">Nicolas Loizou</a> (Edinburgh), 3/2017-5/2017<br> </li>
+            <li><a href="https://nicolasloizou.github.io/">Nicolas Loizou</a> (Edinburgh), 3/2017-5/2017</li>
           </ul>
 
           <br>
